--- a/.github/workflows/master_portfolio-aj.yml
+++ b/.github/workflows/master_portfolio-aj.yml
@@ -23,12 +23,16 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          rm -rf node_modules
+          rm package-lock.json
           npm install
           npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          ls
+          zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
