debug azure deployment

--- a/.github/workflows/master_portfolio-aj.yml
+++ b/.github/workflows/master_portfolio-aj.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Zip artifact for deployment
         run: |
           ls
-          zip release.zip ./* -r
+          zip release.zip ./dist/* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
