--- a/.github/workflows/master_portfolio-aj.yml
+++ b/.github/workflows/master_portfolio-aj.yml
@@ -56,7 +56,9 @@ jobs:
           name: node-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
+        run: |
+          unzip release.zip
+          cat dist/index.html 
       
       - name: Login to Azure
         uses: azure/login@v2
