debug azure deployment

--- a/.github/workflows/master_portfolio-aj.yml
+++ b/.github/workflows/master_portfolio-aj.yml
@@ -74,5 +74,5 @@ jobs:
         with:
           app-name: 'portfolio-aj'
           slot-name: 'Production'
-          package: .
+          package: ./dist
           
